--- a/css/style.css
+++ b/css/style.css
@@ -404,13 +404,16 @@ a {
 
 /* list of cells */
 
+.portfolio-unit {
+  padding: 20px 24px;
+}
+
 .portfolio-name {
   font-weight: 700;
   font-size: 18px;
   line-height: 36px;
   letter-spacing: 0.06;
   color: var(--title-text-color);
-  padding: 0 24px;
   text-align: left;
 }
 .portfolio-text {
@@ -418,14 +421,12 @@ a {
   line-height: 30px;
   letter-spacing: 0.03em;
   margin-bottom: 20px;
-  padding: 0 24px;
   text-align: left;
 }
 .portfolio-list {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 30px 30px;
 }
 .portfolio-item {
   margin-top: 30px;
