--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,7 @@ a {
   max-width: 16px;
   fill: var(--primary-text-color);
   margin-right: 10px;
+  transition: 0.4s;
 }
 
 .contacts-link:hover .header-icon,
@@ -169,7 +170,7 @@ a {
   display: none;
 }
 
-.features {
+.section-features {
   padding: 94px 0px;
 }
 
@@ -311,7 +312,7 @@ a {
 .footer {
   background-color: var(--background-color);
   max-width: 1600px;
-  padding: 60px;
+  padding: 20px;
 }
 
 .logo-footer {
@@ -420,7 +421,6 @@ a {
   font-size: 16px;
   line-height: 30px;
   letter-spacing: 0.03em;
-  margin-bottom: 20px;
   text-align: left;
 }
 .portfolio-list {
